--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,5 +16,5 @@ jobs:
       run: |
         set -eo pipefail
         export LIB_VERSION=${GITHUB_REF:11}
-        pod lib lint --allow-warnings
-        pod trunk push --allow-warnings
+        pod lib lint --allow-warnings --no-clean
+        pod trunk push --allow-warnings --no-clean
