--- a/WISDK.xcframework/Info.plist
+++ b/WISDK.xcframework/Info.plist
@@ -22,11 +22,12 @@
 			<key>BinaryPath</key>
 			<string>WISDK.framework/WISDK</string>
 			<key>LibraryIdentifier</key>
-			<string>ios-x86_64-simulator</string>
+			<string>ios-arm64_x86_64-simulator</string>
 			<key>LibraryPath</key>
 			<string>WISDK.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
+				<string>arm64</string>
 				<string>x86_64</string>
 			</array>
 			<key>SupportedPlatform</key>
