--- a/WISDK.xcframework/ios-x86_64-simulator/WISDK.framework/Modules/WISDK.swiftmodule/x86_64-apple-ios-simulator.abi.json
+++ b/WISDK.xcframework/ios-x86_64-simulator/WISDK.framework/Modules/WISDK.swiftmodule/x86_64-apple-ios-simulator.abi.json
@@ -2287,7 +2287,7 @@
               {
                 "kind": "TypeNominal",
                 "name": "Player",
-                "printedName": "any BitmovinPlayerCore.Player",
+                "printedName": "any BitmovinPlayer.Player",
                 "usr": "c:objc(pl)BMPPlayer"
               },
               {
